<resources>
    <string name="app_name">GestionViajes</string>
    <string name="your_web_client_id">54315647192-i0utimuj8ses7jsn5uomi23l0v3ncouv.apps.googleusercontent.com</string>
    <string name="Bienvenida">Buenos dias y bienvenido</string>
    <string name="BienvenidaRegistro">Registrate para continuar</string>
    <string name="Constrasena">Contraseña</string>
    <string name="CrearCuenta">Crear Cuenta</string>
    <string name="Entrar">Entrar</string>
    <string name="Google">Entrar con Google</string>
    <string name="Inicio">Inicio</string>
    <string name="Camiones">Camiones</string>
    <string name="Salir">Salir</string>
    <string name="Camion">Camion</string>
    <string name="Empleados">Empleados</string>
    <string name="Empleado">Empleado</string>
    <string name="AsignarViaje">Asignar Viaje</string>
    <string name="AddCamion">Añadir Camion</string>
    <string name="AddEmploye">Añadir Chofer</string>
    <string name="Add">Añadir</string>
    <string name="NombreSignificativo">Nombre usuario</string>
    <string name="Chofer">Chofer</string>
    <string name="Marca">Marca</string>
    <string name="Viaje">Viaje</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Detalle">Detalle</string>
    <string name="Administrador">Administrador</string>
    <string name="AdminContrasena">Contraseña Aministrador</string>
    <string name="Usuario">Usuario</string>
    <string name="Telefono">Telefono</string>
    <string name="prefs_file">com.expample.gestionviajes.PREFERENCE_FILE_KEY</string>
    <string name="YaExiste">ya existe</string>
    <string name="IntroduceNombre">Introduce un nombre</string>
    <string name="Editar">Editar</string>
    <string name="Confirmar">Confirmar</string>
    <string name="MailEnUso">El mail ya esta en uso</string>
    <string name="NombreEnUso">El usuario esta en uso</string>
    <string name="RellenaCampos">Rellena los campos</string>
    <string name="UsuarioCreado">Usuario creado</string>
    <string name="ErroMail">Error verificando mail</string>
    <string name="ErrorNombre">Error verificando nombre usuario</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Provincia">Provincia</string>
    <string name="Localidad">Localidad</string>
    <string name="Guardar">Guardar</string>
    <string name="Direccion">Direccion</string>
    <string name="Enviar">Enviar</string>
    <string name="UsuarioNoExiste">El usuario no existe</string>
    <string name="UsuarioAdminNoViaje">No puedes asignar un viaje a un admin</string>
    <string name="ViajeAsignado">Viaje asignado</string>
    <string name="AsignarViajeError">Error al asignar el viaje</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="AcercaDeContenido">"Hecho completamente por Alex Pineño Sanchez  y apoyo de Alexandra "</string>
    <string name="PaginaWeb">Pagina Web</string>
    <string name="Buscar">Buscar</string>
    <string name="NoEncontrado">No encontrado</string>
    <string name="NoEncontradoContenido">No se encontro ningun camion con ese nombre</string>
    <string name="Nombre">Nombre</string>
    <string name="ResultadoBusqueda">Resultado Busqueda</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="EliminarSeguro">¿Estas seguro de que quieres eliminarlo?</string>
    <string name="NoEliminado">Nada fue eliminado</string>
    <string name="Configuracion">Configuracion</string>
    <string name="UsuarioCreadoContenido">Se ha creado un nuevo usuario</string>
    <string name="UsuarioCreadoContenido2">Pulsa para ver los detalles</string>
    <string name="AcercaDeContenido2">Destinado para la mejor empresa del mundo mundial , Pinetrans2000</string>
    <string name="AcercaDeContenido3">"FELIZ NAVIDAD PAPA Y MAMA "</string>
    <string name="Informacion">Informacion</string>
    <string name="InformacionContenido">Contenido</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>