<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/iv_logoInicio"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/fantasma"
        android:transitionName="presentacion_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_da"
        android:text="@string/Bienvenida"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:transitionName="presentacion_titulo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BienvenidaRegistro"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tb_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mail"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:text="machupichu0409@gmail.com"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tb_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Constrasena"
                android:inputType="textPassword"
                android:text="asdfasdf1234"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/b_registroRegistrarse"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#0000"
            android:elevation="0dp"
            android:text="@string/CrearCuenta"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/b_registroEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FFFFFF"
            android:elevation="0dp"
            android:hapticFeedbackEnabled="true"
            android:text="@string/Entrar"
            android:textColor="#000000" />

        <Button
            android:id="@+id/b_registroGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#0000"
            android:elevation="0dp"
            android:text="@string/Google"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/b_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#0000"
            android:elevation="0dp"
            android:text="Youtube"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
