<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AsignarTarea">


    <LinearLayout
        android:id="@+id/ll_inicioCrearCamion"
        android:layout_width="0dp"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/b_cerrarAsignar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#0000"
            android:text="@string/Salir"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textViewCrearCamion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/baloo_da"
            android:gravity="center"
            android:text="@string/Viaje"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/fantasma"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_destinatario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_inicioCrearCamion">


        <TextView
            android:id="@+id/tv_tituloDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_da"
            android:layout_gravity="center"

            android:text="@string/Chofer"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_gravity="center"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tb_destinatario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"

                android:layout_weight="1"
                android:fontFamily="@font/baloo_da"
                android:gravity="top"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:hint="@string/Chofer"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15dp"
                app:boxStrokeColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_asunto2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_destinatario">


        <TextView
            android:id="@+id/tv_contenido3ds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_da"
            android:layout_gravity="center"

            android:text="@string/Localidad"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tb_localidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"

                android:layout_weight="1"
                android:fontFamily="@font/baloo_da"
                android:gravity="top"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:hint="@string/Localidad"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15dp"
                app:boxStrokeColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_asunto3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_asunto2">


        <TextView
            android:id="@+id/tv_contenido4d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_da"
            android:layout_gravity="center"

            android:text="@string/Direccion"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tb_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"

                android:layout_weight="1"
                android:fontFamily="@font/baloo_da"
                android:gravity="top"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:hint="@string/Direccion"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15dp"
                app:boxStrokeColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_asunto3">


        <Button
            android:id="@+id/b_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/baloo_da"
            android:text="@string/Enviar"
            android:textColor="@color/black"


            />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>